:bug: fix: Spacing Problem

--- a/src/styles/4-components/_card.scss
+++ b/src/styles/4-components/_card.scss
@@ -61,7 +61,7 @@
   &__body {
     text-align: center;
 
-    margin: 1rem;
+    padding: 1rem;
 
     &__description {
       color: rgba(black, 0.8);
